test/typeCheckTest/fail/test30.ic
class BadLess {
	void main (string [] args) {
		boolean cond = null < args[args.length - 1];
	}
}